<resources>
    <string name="app_name">StarVo</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Welcome to StarVo</string>
    <string name="prompt_email">Email or Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="action_sign_in">Sign in</string>
    <string name="intro_no_account">Don\'t have an account?</string>
    <string name="intro_create_account">Create new account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Create Account -->
    <string name="title_activity_register">Create New Account</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_username">Username</string>
    <string name="register_zip">Zip Code</string>
    <string name="register_terms">By registering, you agree to the Terms and Conditions.</string>
    <string name="register_create">Create New Account</string>

    <!-- Strings related to Home -->
    <string name="title_activity_home">Home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
